fix a problem with row headers being to high in z-index

--- a/styles/collection.less
+++ b/styles/collection.less
@@ -404,11 +404,12 @@ ul.collection-controls li.pagecount {
 
 button.dropdown-toggle {
   position: relative;
-  z-index: 21;
+  z-index: 90;
 }
 
 ul.collection-controls li.collection-title button {
   position: relative;
+  z-index: 4;
 }
 
 .row.active ul.collection-controls li.collection-title button {
